--- a/views/partials/searchresults.handlebars
+++ b/views/partials/searchresults.handlebars
@@ -1,7 +1,7 @@
 {{#if noResults}}
   <div class="content-box">
     <div class="row">
-      <div class="col commentText">
+      <div class="col commentContent">
         <p class="mt-2 mb-4 text-center" style="font-size:1.3em">
           No results found!
         </p>
@@ -12,7 +12,7 @@
   {{#each results}}
   <div class="content-box">
     <div class="row">
-      <div class="col commentText">
+      <div class="col commentContent">
         <p class="text-muted">
           {{{this.type}}}
         </p>
