--- a/views/partials/votes.handlebars
+++ b/views/partials/votes.handlebars
@@ -2,7 +2,7 @@
 {{#if canDisplay}}
 <div class="comment commentContainer">
   <div class="row">
-    <div class="col commentText">
+    <div class="col commentContent">
       <div class="mb-2 d-flex">
         <img class="postAuthorImage" src="/images/{{#if this.creator.imageEnabled}}{{this.creator.image}}{{else}}cake.svg{{/if}}" />
         <div class="post-meta">
