--- a/views/partials/communities.handlebars
+++ b/views/partials/communities.handlebars
@@ -1,7 +1,7 @@
 {{#each communities}}
   <div class="content-box">
     <div class="row">
-      <div class="col commentText">
+      <div class="col commentContent">
         <p class="mb-2" style="font-size:1.3em">
           <img class="postAuthorImage" src="{{#if this.imageEnabled}}/images/communities/{{this.image}}{{else}}/images/cake.svg{{/if}}" />
           <strong><a class="authorLink" href="/community/{{this.slug}}">{{this.name}}</a></strong> &middot; <span class="text-muted">{{this.membersCount}} {{plural this.membersCount 'member(s)'}}</span>
