--- a/views/partials/communitysidebar.handlebars
+++ b/views/partials/communitysidebar.handlebars
@@ -1,5 +1,5 @@
 <div id="profileImageContainer">
-  <img alt="Display image for the community '{{ communityData.name }}'" id="profileImage" src="{{#if communityData.imageEnabled}}/images/communities/{{communityData.image}}{{else}}/images/cake.svg{{/if}}" />
+  <img alt="Display image for the community '{{ communityData.name }}'" id="profileImage" src="{{#if communityData.imageEnabled}}/images/communities/{{communityData.image}}{{else}}/images/communities/cake.svg{{/if}}" />
 </div>
 
 <h3 style="font-family:'Roboto Mono',monospace;border-bottom:2px solid #ce1717;padding-bottom:10px;margin-bottom:20px;">
