--- a/views/partials/newpostsavailable.handlebars
+++ b/views/partials/newpostsavailable.handlebars
@@ -1,6 +1,6 @@
 <article class="comment commentContainer" id="newPostsAvailable">
   <div class="row">
-    <div class="col commentText">
+    <div class="col commentContent">
       <p class="text-center">
         <i class="fas fa-sync-alt"></i> <a href="#" onclick="window.location.reload()">Refresh to see new posts.</a>
       </p>
