Comment box height now resets after you post your comment

--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -100,6 +100,7 @@ $(function() {
     $.post("/createcomment/"+$(this).attr("id"), { commentContent: commentContent }, function(data) {
       if (data){
         textarea.val("");
+        textarea[0].style.height = "";
         let html = '<div class="individualReplyContainer"><p class="mb-1"><img class="postAuthorImage" style="width:25px;height:25px;border-radius:3px;" src="/images/' + data.image + '" />' + data.name + ' &middot; <small class="commentTimestamp text-muted">' + data.timestamp + '</small><button type="button" class="btn btn-link btn-xs replyToComment text-muted" id="' + data.username + '"><i class="fas fa-reply"></i></button></p>' + data.content +'</div>'
         $(html).hide().appendTo(commentsContainer).fadeIn();
         commentButton.prop('disabled', false);
