--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -98,7 +98,7 @@ $(function() {
     let commentButton = $(this);
     commentButton.prop('disabled', true);
     $.post("/createcomment/"+$(this).attr("id"), { commentContent: commentContent }, function(data) {
-      if (data){
+      if (data.name){
         textarea.val("");
         textarea[0].style.height = "";
         let html = '<div class="individualReplyContainer"><p class="mb-1"><img class="postAuthorImage" style="width:25px;height:25px;border-radius:3px;" src="/images/' + data.image + '" />' + data.name + ' &middot; <small class="commentTimestamp text-muted">' + data.timestamp + '</small><button type="button" class="btn btn-link btn-xs replyToComment text-muted" id="' + data.username + '"><i class="fas fa-reply"></i></button><button type="button" class="btn btn-link btn-xs deleteComment text-muted" id="'+ data.comment_id + '" data-post-id="' + data.post_id + '" data-comment-id="'+data.comment_id+'">x</button></p>' + data.content +'</div>';
