--- a/views/partials/posts.handlebars
+++ b/views/partials/posts.handlebars
@@ -120,7 +120,7 @@
             <div class="individualReplyContainer">
               <p class="mb-1"><img alt="Profile image of @{{this.author.username}}" class="postAuthorImage" style="width:25px;height:25px;border-radius:3px;" src="/images/{{#if this.author.imageEnabled}}{{this.author.image}}{{else}}cake.svg{{/if}}" />
                 {{#if this.author.displayName}}
-                  <strong><a class="authorLink" href="/{{this.author.username}}">{{this.author.displayName}}</a></strong>
+                  <strong><a class="authorLink" href="/{{this.author.username}}">{{this.author.displayName}}</a></strong> @{{this.author.username}}
                 {{else}}
                   <strong><a class="authorLink" href="/{{this.author.username}}">@{{this.author.username}}</a></strong>
                 {{/if}} {{#contains ../../flaggedUsers this.author.email}}<i class="fas fa-exclamation-triangle text-danger"></i>{{/contains}} &middot; <small class="commentTimestamp text-muted">{{this.parsedTimestamp}}</small>
