Clarified the emoji button id name

--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -59,7 +59,7 @@
       <!-- <input type="file" name="postImage" id="postImageUpload" accept="image/*"> -->
       <button type="button" class="btn btn-primary btn-fade" id="postImageButton"><i class="fas fa-image"></i></button>
       <button type="button" class="btn btn-primary btn-fade" id="postContentWarningsButton">CWs</button>
-      <button type="button" class="btn btn-primary btn-fade" id="Emoji">Emoji</button>
+      <button type="button" class="btn btn-primary btn-fade" id="emojiWindowButton">Emoji</button>
       <button type="submit" class="btn btn-primary btn-fade" id="postSubmit" data-loading-text="<i class='fas fa-spinner fa-spin'></i> Uploading">Send <i class="fas fa-chevron-right"></i></button>
     </div>
   </div>
