--- a/views/partials/uploadscripts.handlebars
+++ b/views/partials/uploadscripts.handlebars
@@ -7,7 +7,7 @@ $(function() {
   $("#postContentWarningsButton").click(function(){
     $("#postContentWarningsContainer").slideToggle("fast");
   })
-  $("#Emoji").click(function(){
+  $("#emojiWindowButton").click(function(){
     $("#emojiWindow").slideToggle("fast");
   })
   $(".emoji").click(function(){
