--- a/views/partials/uploadscripts.handlebars
+++ b/views/partials/uploadscripts.handlebars
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 $(function() {
   $("#postContent").focus(function(){
-    $("#postControls").css('display', 'flex');
+    $(".post-controls").css('display', 'flex');
   })
   upload = new FileUploadWithPreview('postImageUpload')
   $("#postContentWarningsButton").click(function(){
