--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -1,5 +1,18 @@
-<div id="profileImageContainer">
-  <img alt="Profile image for the user @{{ profileData.username}}" id="profileImage" src="{{#if profileData.imageEnabled}}/images/{{profileData.image}}{{else}}/images/cake.svg{{/if}}" />
+<div class="row mb-3">
+  <div class="col-6 d-flex">
+    <div id="profileImageContainer">
+      <img alt="Profile image for the user @{{ profileData.username}}" id="profileImage" src="{{#if profileData.imageEnabled}}/images/{{profileData.image}}{{else}}/images/cake.svg{{/if}}" />
+    </div>
+  </div>
+  <div class="col-6 d-flex justify-content-end">
+    {{#if isOwnProfile}}
+      <div class="btn-group-vertical" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-outline-secondary" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal"><i class="fas fa-pencil-alt"></i> Edit</button>
+        <a href="/settings" class="btn btn-outline-secondary"><i class="fas fa-cog"></i> Settings</a>
+        <a href="/logout" class="btn btn-outline-secondary"><i class="fas fa-sign-out-alt"></i> Log out</a>
+      </div>
+    {{/if}}
+  </div>
 </div>
 
 <h3 style="font-family:'Roboto Mono',monospace;border-bottom:2px solid #ce1717;padding-bottom:10px;margin-bottom:20px;">
@@ -7,9 +20,6 @@
     {{ profileData.displayName }}
   {{/if}}
   {{#if profileData.displayName }}<br /> <span class="text-muted small">{{/if}}@{{ profileData.username}}{{#if profileData.displayName }}</span>{{/if}}
-  {{#if isOwnProfile}}
-    <button type="button" id="updateProfileButton" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#updateProfileModal"><i class="fas fa-pencil-alt"></i></button>
-  {{/if}}
 </h3>
 {{#if profileData.aboutParsed}}
   <p>
