--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -6,6 +6,16 @@ $(function() {
   autosize($('textarea'));
   $("#notificationsContainer").load( "/api/notification/display" );
 
+  $('#notificationsDropdownLink').hover(function(){
+    $(this).find('.badge').css('background-color', '#ce1717');
+  }, function() {
+    $(this).find('.badge').css('background-color', '#6c757d');
+  });
+
+  if ($('#notificationsPageLink').hasClass('active')){
+    $('#notificationsPageLink').find('.badge').css('background-color', '#900202');
+  }
+
   // window.onbeforeunload = function() {
   //     return true;
   // };
